# docker-swish-mcp

./: .gitignore  Dockerfile  Dockerfile.mod  ENHANCED_USAGE_GUIDE.md  LICENSE  QUICK_START_DEMO.md  README.md  claude_desktop_config.json  example_mcp_config.json  main.backup.py  main_fixed.py  pyproject.toml  quick_test.py  setup.sh  setup_mcp.sh  test_enhancements.py  test_fix.py
enhanced_tools/: demo.py  enhanced_swish_tools.py
fixes/: FIX_SUMMARY.md  README.md  README_FIXED.md  SETUP_GUIDE.md  apply_fixes.sh  cleanup_docker.sh  complete_fix.sh  improved_main.py  test_docker.py  test_mcp.py
scripts/: entrypoint.sh
src/docker_swish_mcp/: __init__.py  main.py  main_original.py  persistent_session.py  simple_session.py
swish-data-new/: ai_metacognition_framework.pl  aseke_base.pl  aseke_corrected.pl  debug_test.pl  demo_kb.pl  methodological_analysis.pl  mvp_curiosity_loop.pl  simple_test.pl  synthetic_evaluation.pl  test.pl  test_startup.pl
swish-data-new/data/: stats.db
swish-data-new/data/storage/ref/: head
