[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-swish-mcp"
dynamic = ["version"]
description = "MCP server providing seamless Prolog integration with auto-managed SWISH container"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "prolog", "swish", "docker", "logic-programming"]
authors = [
  {name = "AI Workspace", email = "angrysky56@example.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "docker>=7.0.0",
  "requests>=2.31.0",
  "aiofiles>=23.0.0",
  "aiohttp>=3.9.0",
  "pathlib>=1.0.0",
  "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/angrysky56/docker-swish-mcp#readme"
Issues = "https://github.com/angrysky56/docker-swish-mcp/issues"
Source = "https://github.com/angrysky56/docker-swish-mcp"

[project.scripts]
docker-swish-mcp = "docker_swish_mcp.main:main"

[tool.hatch.version]
path = "src/docker_swish_mcp/__about__.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
